@@ -396,8 +396,8 @@ extern int coff_n_line_nos;
 #define obj_emit_lineno(WHERE,LINE,FILE_START)	abort ()
 extern void coff_add_linesym PARAMS ((symbolS *));
 
-void c_dot_file_symbol PARAMS ((const char *filename));
-#define obj_app_file(name, app) c_dot_file_symbol (name)
+void c_dot_file_symbol PARAMS ((const char *, int));
+#define obj_app_file(name, app) c_dot_file_symbol (name, app)
 
 extern void coff_frob_symbol PARAMS ((symbolS *, int *));
 extern void coff_adjust_symtab PARAMS ((void));
@@ -839,8 +839,8 @@ extern segT obj_coff_add_segment PARAMS ((const char *));
 
 extern void obj_coff_section PARAMS ((int));
 
-extern void c_dot_file_symbol PARAMS ((char *filename));
-#define obj_app_file(name, app) c_dot_file_symbol (name)
+extern void c_dot_file_symbol PARAMS ((const char *, int));
+#define obj_app_file(name, app) c_dot_file_symbol (name, app)
 extern void obj_extra_stuff PARAMS ((object_headers * headers));
 
 extern segT s_get_segment PARAMS ((symbolS *ptr));
